# MCP-Tools

./: .gitignore  README.md  calendar_functions.py  calendar_server.py  pyproject.toml
google_calendar/: README.md  calendar_functions.py  calendar_server.py
spotify/: .env.example  README.md  config.py  spotify_functions.py  spotify_server.py
